<resources>
    <string name="app_name">Pusvo</string>
    <string name="hp">No HP</string>
    <string name="server_client_id">764817079788-u6a6hpnhb5jpsi07nf2345ce84b671nk.apps.googleusercontent.com</string>
    <string name="address_tko">0x7db49a30560e6930f0aa6d0ee21b238d5d766217</string>
    <string name="facebook_app_id">793605951708682</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="login_dengan_google">Lanjutkan dengan Google</string>
    <string name="login_dengan_facebook">Login dengan Facebook</string>
    <string name="selamatdatang">Selamat datang</string>
    <string name="hporrek">No E-Wallet/Rekening</string>
    <string name="contohhp">Contoh : 081234567890</string>
    <string name="contohrek">Contoh : 999987654321</string>
    <string name="norekcontoh">Nomor rekening, contoh : 999987654321</string>
    <string name="nama">Nama</string>
    <string name="tambahkan_bank">+ Tambahkan E-Wallet/Bank</string>
    <string name="john_email">john@doe.com</string>
    <string name="manual">Manual.\nGunakan transaksi manual untuk fee lebih hemat.\nHanya tersedia di jam kerja.\nDiproses 5–10 menit setelah order dibayar. </string>
    <string name="manual2">Manual (Sedang tidak tersedia).\nGunakan transaksi manual untuk fee lebih hemat.\nHanya tersedia di jam kerja.\nDiproses 5–10 menit setelah order dibayar. </string>
    <string name="alamat">Alamat (Nama jalan/desa, nomor rumah/RT RW)</string>
    <string name="contohalamat">Desa Konoha RT 02 RW 05</string>
    <string name="contohtgl">31–01–1971</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="kycdeclare">-Saya menyatakan bahwa data di atas adalah benar identitas saya sendiri.\n-Saya tidak akan pernah memberikan/meminjamkan/menjual akun saya kepada pihak manapun.\n-Saya tidak akan pernah menyalahgunakan layanan Pusvo untuk aktivitas money laundry, judi online, dan kegiatan lain yang tidak sesuai hukum di Indonesia.\nSaya sudah membaca syarat dan ketentuan yang berlaku pada proses KYC ini</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="id_transaksi">ID Transaksi</string>
    <string name="pilih_provinsi">Pilih provinsi</string>
    <string name="pilih_kabupaten">Pilih kabupaten/Kota</string>
    <string name="pilih_kecamatan">Pilih kecamatan</string>
    <string name="pilih_desa">Pilih desa</string>
    <string name="verifikasi_kyc">Verifikasi KYC</string>
    <string name="kontak_terpilih">Kontak Terpilih</string>
    <string name="meter_terpilih">No Meter Terpilih</string>
    <string name="atau">Atau</string>
    <string name="depositwarning">Transaksi menggunakan saldo deposit diautentikasi dengan Google authenticator, sebelum deposit pastikan Google Authenticator masih terinstal.</string>
    <string name="sk">Syarat dan ketentuan</string>
    <string name="hanya_angka">Hanya Angka</string>
    <string name="deposit">Deposit</string>
    <string name="silakan_scan">Silakan scan QR dibawah untuk membayar dengan aplikasi e-wallet favorit Anda (Shopeepay,OVO,Dana,Linkaja,Gopay,Mobile BCA, dan lainnya)</string>
    <string name="silakan_shopeepay">Silakan lakukan pembayaran senilai :</string>
    <string name="hello_world">Testing</string>
    <string name="menu_settings">Pengaturan</string>
    <string name="jumlah">Jumlah</string>
    <string name="kyc_sedang_proses">Data KYC berhasil diterima, estimasi lamanya proses KYC adalah 1x24 jam, namun tidak menutup kemungkinan dapat melebihi estimasi tersebut.</string>
    <string name="simpan">Simpan</string>
    <string name="error500">Maaf, sistem kami sedang mengalami gangguan, hubungi kami jika Anda melihat pesan ini terus menerus.</string>
    <string name="linkaja">Linkaja</string>
    <string name="id_deposit">ID Deposit</string>
    <string name="batas_waktu">Batas Waktu Pembayaran</string>
    <string name="awal">Awal</string>
    <string name="shopeepay">Shopeepay</string>
    <string name="qris">QRIS</string>
    <string name="voucher">Voucher</string>
    <string name="sn">SN</string>
    <string name="poin">Poin</string>
    <string name="salin">Salin</string>
    <string name="za">ht</string>
    <string name="zb">tp</string>
    <string name="zc">api12.pusvo.com</string>
    <string name="id_game">ID Game</string>
    <string name="baru">Baru</string>
    <string name="reset_authenticator">Reset Authenticator</string>
    <string name="formatpassword">Password harus mengandung huruf besar, kecil dan angka</string>
    <string name="lupa_password">Lupa password</string>
    <string name="lupa_username">Lupa username</string>
    <string name="tampilkan_password">Tampilkan password</string>
    <string name="reset_password">Reset password</string>
    <string name="reset">Reset</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="ulangi_password_baru">Ulangi Password Baru</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="topup_ewallet_manual">Top Up E-Wallet Manual</string>
    <string name="topup_ewallet">Top Up E-Wallet</string>
    <string name="ewallet">E-Wallet</string>
    <string name="akun">Akun</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="transaksi">Transaksi</string>
    <string name="total_sukses">Total Transaksi Sukses</string>
    <string name="token">Token Listrik</string>
    <string name="keluar">Keluar</string>
    <string name="uline">Uang Online</string>
    <string name="saldo">Saldo Pusvo</string>
    <string name="daftar_harga">Daftar Harga</string>
    <string name="name">Produk</string>
    <string name="binance_idr">Binance IDR</string>
    <string name="no_va">Nomor VA</string>
    <string name="voucher_tv">Voucher TV</string>
    <string name="marketplace">Tagihan Marketplace</string>
    <string name="pln_pascabayar">PLN Pascabayar</string>
    <string name="bpjs">BPJS Kesehatan</string>
    <string name="id_pelanggan">ID Pelanggan</string>
    <string name="id_order">ID Order</string>
    <string name="idpel_terpilih">ID Pelanggan Terpilih</string>
    <string name="pilih_produk">Pilih Produk</string>
    <string name="pilih_bank">Pilih Bank/E-Wallet</string>
    <string name="email">Email</string>
    <string name="email_indodax">Email Sesuai Akun Indodax</string>
    <string name="atau2">atau</string>
    <string name="transaksi_sukses">Transaksi sukses</string>
    <string name="transaksi_gagal_hubungi_kami">Transaksi gagal, hubungi kami untuk refund</string>
    <string name="transaksi_batal">Transaksi dibatalkan sistem</string>
    <string name="transaksi_proses">Transaksi sedang diproses</string>
    <string name="transaksi_belum">Transaksi belum dibayar</string>
    <string name="transaksi_kurang">Pembayaran kurang, hubungi kami untuk refund</string>
    <string name="transaksi_refund">Transaksi gagal, dana sudah dikembalikan</string>
    <string name="sedang_diproses">Sedang Diproses</string>
    <string name="belum_dibayar">Belum Dibayar</string>
    <string name="sukses">Sukses</string>
    <string name="gagal">Gagal</string>
    <string name="dibatalkan">Dibatalkan</string>
    <string name="transaksi_sedang_diproses">Transaksi sedang diproses</string>
    <string name="gagal_diproses">Gagal diproses, silakan hubungi kami untuk pengembalian dana atau penggantian nomor</string>
    <string name="butuh_bantuan">Butuh bantuan?</string>
    <string name="loading">Loading</string>
    <string name="rincian_transaksi">Rincian Transaksi</string>
    <string name="petunjuk_reset_authenticator">Untuk reset authenticator silakan kirim email ke cs@pusvo.com isikan subjek \"Reset google authenticator\", kirimkan username dan no hp sesuai akun. Reset google authenticator akan diproses dalam 1x24 jam, Anda akan menerima Whatsapp/SMS berisi secret key baru dari sistem di no hp yang terdaftar pada akun. Demi keamanan, pastikan merahasiakan secret key dari pihak manapun dan segera hapus SMS/WA jika Google Authenticator sudah diaktifkan kembali.\n\n</string>
    <string name="skkyc">Syarat dan ketentuan\n\n
        1. Sebelum klik lanjutkan pastikan data yang diisi benar.
			  \n2. Nama pada akun E-Wallet/Rekening wajib sama persis dengan nama pada akun di Pusvo maupun di Indodax. Perbedaan nama walau hanya 1 huruf dapat menyebabkan KYC gagal.
			  \n3. KYC diperlukan untuk pencegahan penyalahgunaan dari kegiatan-kegiatan yang melanggar hukum Indonesia seperti pencucian uang, pendanaan terorisme, perjudian online, dan lainnya.
			  \n4. Proses KYC akan selesai sekitar 1x24 jam setelah diajukan. Dalam keadaan tertentu mungkin bisa membutuhkan waktu lebih dari seharusnya.
			  \n5. Data berupa alamat dan tanggal lahir disimpan sementara di server sampai pengajuan diterima, selanjutnya data tersebut hanya disimpan secara offline.
			  \n6. KYC INI MERUPAKAN KYC RINGAN, TIDAK MEMERLUKAN UPLOAD FOTO KTP, NAMUN PASTIKAN DATA YANG ANDA INPUT BENAR.
			  \n7. Segala hal yang terjadi pada akun Anda sebelum dan sesudah proses KYC merupakan tanggung jawab Anda pribadi, dilarang keras meminjamkan, memberikan dan/atau menjual akun Anda kepada pihak manapun.
    </string>
    <string name="keterangan">Keterangan</string>
    <string name="waktu">Waktu</string>
    <string name="metode">Metode Pembayaran</string>
    <string name="indodax">Indodax</string>
    <string name="history">History</string>
    <string name="bca">BCA</string>
    <string name="bni">BNI</string>
    <string name="mandiri">Mandiri</string>
    <string name="ovo">OVO</string>
    <string name="harga">Harga</string>
    <string name="tikwa"> : </string>
    <string name="skdeposit2">Syarat dan ketentuan\n\n
    Deposit melalui transfer BCA :\n
        1. Maksimal waktu deposit adalah jam 21.00 setiap harinya.\n
        2. Minimal deposit Rp 10.000.\n
        3. Hanya menerima transfer dari rekening sesama BCA.\n
        4. Berita transfer wajib diisi sesuai instruksi.
        \n\n
    Deposit melalui transfer BNI :\n
        1. Maksimal waktu deposit adalah jam 21.00 setiap harinya.\n
        2. Minimal deposit Rp 10.000.\n
        3. Hanya menerima transfer dari rekening sesama BNI.\n
        4. Berita transfer wajib diisi sesuai instruksi.
        \n\n
    Deposit melalui transfer Mandiri :\n
        1. Maksimal waktu deposit adalah jam 21.00 setiap harinya.\n
        2. Minimal deposit Rp 10.000.\n
        3. Hanya menerima transfer dari rekening sesama Mandiri.\n
        4. Berita transfer wajib diisi sesuai instruksi.
        \n\n
    Deposit melalui transfer OVO :\n
        1. Maksimal waktu deposit adalah jam 21.00 setiap harinya.\n
        2. Minimal deposit Rp 10.000.\n
        3. Hanya menerima transfer dari sesama OVO.\n
        4. Berita transfer wajib diisi sesuai instruksi.
        \n\n
        \n
    </string>
</resources>