<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6"
    android:orientation="vertical"
    tools:context=".DepositActivity">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:id="@+id/toolbar"
                android:theme="@style/AppTheme.NoActionBar">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="right"
                    android:layout_gravity="end"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    >
                    <ImageView
                        android:contentDescription="@string/history"
                        android:id="@+id/history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:layout_marginEnd="15dp"
                        android:src="@drawable/ic_history" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scrollbars="none">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/linearpengumuman"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="start"
                            android:orientation="horizontal">

                            <TextView
                                android:textSize="14sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:text="@string/depositwarning"
                                android:textColor="#FF0000" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:maxLength="6"
                                android:id="@+id/editTextjumlah"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:autofillHints="@string/jumlah"
                                android:hint="@string/jumlah"
                                android:inputType="number"
                                android:singleLine="true" />
                        </LinearLayout>


                        <TextView
                            android:textSize="14sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/metode"
                            android:textColor="@android:color/black" />


                        <RadioGroup
                            android:id="@+id/radioMetode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:visibility="gone"
                                android:textSize="16sp"
                                android:id="@+id/radioIndodax"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/indodax" />

                            <RadioButton
                                android:textSize="16sp"
                                android:id="@+id/radioBCA"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/bca" />

                            <RadioButton
                                android:textSize="16sp"
                                android:id="@+id/radioBNI"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/bni" />

                            <RadioButton
                                android:textSize="16sp"
                                android:id="@+id/radioMandiri"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/mandiri" />

                            <RadioButton
                                android:textSize="16sp"
                                android:id="@+id/radioOvo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ovo" />
                        </RadioGroup>

                        <Button
                            android:id="@+id/buttonSubmit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="16dp"
                            android:background="@drawable/buttonshape"
                            android:text="@string/lanjutkan"
                            android:textAllCaps="false"
                            android:textColor="#ffffff"
                            android:textStyle="bold"
                            app:fontFamily="@font/ubuntu" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="8dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="5dp">

                        <TextView
                            android:textSize="14sp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/skdeposit2"
                            android:textColor="#000000"
                            />

                </androidx.cardview.widget.CardView>
</LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>


