<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin">
        <TableRow>
            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/id_transaksi" />

            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/tikwa" />

            <TextView
                android:textSize="14sp"
                android:id="@+id/textTransaction_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>
        </TableRow>

        <TableRow>
            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/waktu" />

            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/tikwa" />

            <TextView
                android:textSize="14sp"
                android:id="@+id/textWaktu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>
        </TableRow>
    <TableRow>
            <TextView

                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/hp" />

            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/tikwa" />

            <TextView
                android:textSize="14sp"
                android:id="@+id/texthp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>
        </TableRow>

        <TableRow>
            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/name" />

            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/tikwa" />

            <TextView
                android:textSize="14sp"
                android:layout_weight="1"
                android:id="@+id/textProduk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>
        </TableRow>


        <TableRow>
            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/harga" />

            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/tikwa" />

            <TextView
                android:textSize="14sp"
                android:id="@+id/textHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>
        </TableRow>

        <TableRow>
            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/metode" />

            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/tikwa" />

            <TextView
                android:textSize="14sp"
                android:id="@+id/textMetode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>
        </TableRow>

        <TableRow android:id="@+id/linearKeterangan"
            android:visibility="gone">
            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/sn" />

            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/tikwa" />

            <TextView
                android:textSize="14sp"
                android:layout_weight="1"
                android:id="@+id/textKeterangan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>
        </TableRow>

        <TableRow>
            <TextView android:id="@+id/textTransaction_kode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>



        </TableRow>
</TableLayout>
        </androidx.cardview.widget.CardView>

